# password_manager

./: Cargo.toml
src/: main.rs  passwords.json
