[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# Dependencies for your project
[dependencies]
aes-gcm = "0.10"
aes = "0.8"
block-modes = "0.8"
rand = "0.8"
pbkdf2 = "0.10"            # Updated version
sha2 = "0.10"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"              # Ensure the version matches

